# AmbHMEG

./: .gitignore  LICENSE  README.md  pyproject.toml
alphabet/: mathwriting.txt
configs/: graph_sd.py
gryphgen/data/: __init__.py  dataset.py  pipeline.py
gryphgen/engine/: __init__.py  hook.py
gryphgen/gh/: __init__.py  gh.py
gryphgen/hmeg/: __init__.py  bbox_net.py  blocks.py  graph.py  layer.py  utils.py
gryphgen/inkml/: __init__.py  inkml.py  paint.py  scale.py
gryphgen/model/: __init__.py  batcher.py  encoder.py  model.py  utils.py
gryphgen/score/: __init__.py  dump.py
gryphgen/vocab/: __init__.py  vocab.py
scripts/: generate.py  generate_gh.py  train.py
